sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:22: error: type mismatch;
 found   : Boolean(true)
 required: Int
      echanger=true
               ^